--- a/consulta.html
+++ b/consulta.html
@@ -130,6 +130,9 @@
         <button onclick="filtrarPorEstado('C')" class="btn btn-sm">Con Convenio</button>
         <button onclick="filtrarPorEstado('P')" class="btn btn-sm">Pagadas</button>
         <button onclick="filtrarPorEstado('B')" class="btn btn-sm">Baja</button>
+        <button onclick="limpiarTodasLasCausas()" class="btn btn-peligro" style="margin-left: 20px;">
+  🗑️ Limpiar Todo
+</button>
       </div>
     </div>
     
