--- a/fusion.html
+++ b/fusion.html
@@ -84,7 +84,7 @@
 
             <div class="border-2 border-dashed border-gray-300 rounded-lg p-8 text-center hover:border-blue-500 transition-colors" id="dropZone">
                 <input type="file" id="fileInput" accept=".xlsx,.xls" class="hidden">
-                <div class="cursor-pointer" onclick="document.getElementById('fileInput').click()">
+                <div class="cursor-pointer">
                     <div class="text-4xl mb-2">📊</div>
                     <p class="text-gray-600 mb-2">Haz clic para seleccionar o arrastra tu archivo aquí</p>
                     <p class="text-sm text-gray-400">Solo archivos Excel (.xlsx)</p>
